--- a/.github/workflows/c-cpp-selfhosted.yml
+++ b/.github/workflows/c-cpp-selfhosted.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: build
-      run: autoreconf && ./configure && make -j8
+      run: make -j8
     - name: test
       run: make test
   hdf5_compile:
@@ -28,7 +28,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: build
-      run: autoreconf && ./scripts/install-hdf5.sh && ./configure --enable-localhdf5 && make -j8
+      run: make -j8
     - name: test
       run: make test
     - name: valgrind
@@ -42,4 +42,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: build
-      run: autoreconf && ./configure && make pyslow5
+      run: make pyslow5
