--- a/.github/workflows/c-cpp-selfhosted-mac.yml
+++ b/.github/workflows/c-cpp-selfhosted-mac.yml
@@ -16,6 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: build
-      run: autoreconf && ./scripts/install-hdf5.sh && ./configure --enable-localhdf5 && make -j8
+      run: make -j8
     - name: test
       run: make test
