--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev libhdf5-dev gcc g++ autoconf automake make
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
     - name: env
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version
     - name: build
-      run: autoreconf && ./configure && make -j8
+      run:  make -j8
     - name: test
       run: make test
   ubuntu_16:
@@ -27,26 +27,24 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev libhdf5-dev
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev
     - name: build
-      run: autoreconf && ./configure && make -j8
+      run: make -j8
     - name: test
       run: make test
   ubuntu_18:
-    name: Ubuntu 18 hdf5 install script
+    name: Ubuntu 18
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev valgrind
     - name: build
-      run: autoreconf && ./scripts/install-hdf5.sh && ./configure --enable-localhdf5 && make -j8
+      run:  make -j8
     - name: test
       run: make test
     - name: test valgrind
       run: ./test/test.sh mem
-    - name: valgrind
-      run: valgrind --leak-check=full --error-exitcode=1 ./slow5tools f2s test/data/raw/chr22_meth_example-subset-multi > /dev/null
   ubuntu_20:
     name: Ubuntu 20
     runs-on: ubuntu-20.04
@@ -54,10 +52,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt-get update && sudo apt-get install zlib1g-dev
-    - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev libhdf5-dev
     - name: build
-      run: autoreconf && ./configure && make -j8
+      run: make -j8
     - name: test
       run: make test
   os_x:
@@ -66,20 +62,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: brew install hdf5 autoconf automake
+      run: brew install autoconf automake
     - name: build
-      run: autoreconf --install  && ./configure && make -j8
-    - name: test
-      run: make test
-  os_x2:
-    name: OSX hdf5 hdf5 install script
-    runs-on: macos-10.15
-    steps:
-    - uses: actions/checkout@v2
-    - name: install packages
-      run: brew install gcc autoconf automake
-    - name: build
-      run: autoreconf --install && CC=gcc CXX=g++ CFLAGS="-Wno-implicit-function-declaration" ./scripts/install-hdf5.sh && ./configure --enable-localhdf5 && make -j8
+      run: make -j8
     - name: test
       run: make test
   pyslow5_ubuntu_16:
@@ -88,6 +73,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev libhdf5-dev python3-pip && pip3 install setuptools cython
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython
     - name: build
-      run: autoreconf && ./configure && make pyslow5
+      run: make pyslow5
