--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -54,9 +54,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt-get update && sudo apt-get install zlib1g-dev
-    - name: build
+    - name: build-gcc
       run: make -j8
-    - name: test
+    - name: test-gcc
+      run: make test
+    - name: build-clang
+      run: make CC=clang -j8
+    - name: test-clang
       run: make test
   os_x:
     name: OSX
@@ -71,12 +75,3 @@ jobs:
       run: make test
     - name: examples
       run: make examples
-  pyslow5_ubuntu_18:
-    name: pyslow5 Ubuntu 18
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v2
-    - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython
-    - name: build
-      run: make pyslow5
