--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install --upgrade pip && pip3 install setuptools cython
     - name: build
       run: make pyslow5
   pyslow5_ubuntu_18:
