--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,21 +8,24 @@ on:
 
 jobs:
   ubuntu_14:
-    name: ubuntu_14
-    runs-on: ubuntu-16.04
+    name: pyslow5 Ubuntu_14
+    runs-on: ubuntu-20.04
     container: ubuntu:14.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython --user
     - name: env
-      run: lsb_release -a &&  ldd --version && gcc --version && g++ --version
+      run: lsb_release -a &&  ldd --version && gcc --version && g++ --version && python3 --version
     - name: build
       run: make pyslow5
   ubuntu_16:
     name: pyslow5 Ubuntu 16
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-20.04
+    container: ubuntu:16.04
     steps:
+    - name: env
+      run: lsb_release -a &&  ldd --version && gcc --version && g++ --version  && python3 --version      
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython --user
