--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,7 +25,7 @@ jobs:
     steps:  
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip cython python3-setuptools
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip python3-setuptools && pip3 install cython
     - name: env
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version  && python3 --version     
     - name: build
