now an index is created when doing load

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -22,3 +22,27 @@ data/out/unit_test_out_two_rg
 endian_test
 unit_test
 unit_test_out.txt
+data/err/parse_bad.slow5.idx
+data/exp/aux_array/exp_lossless.blow5.idx
+data/exp/aux_array/exp_lossless.slow5.idx
+data/exp/aux_array/exp_lossless_gzip.blow5.idx
+data/exp/one_fast5/exp_1_default.slow5.idx
+data/exp/one_fast5/exp_1_default_gzip.blow5.idx
+data/exp/one_fast5/exp_1_lossless.blow5.idx
+data/exp/one_fast5/exp_1_lossless.slow5.idx
+data/exp/one_fast5/exp_1_lossless_gzip.blow5.idx
+data/exp/two_rg/exp_default.slow5.idx
+data/exp/two_rg/exp_lossless.slow5.idx
+data/out/exp_1_default_add_duplicate.slow5.idx
+data/test/parsing_error_check/auxiliary_data_missing.slow5.idx
+data/test/parsing_error_check/auxiliary_datatype_missing.slow5.idx
+data/test/parsing_error_check/auxiliary_name_missing.slow5.idx
+data/test/parsing_error_check/deleted_auxiliary_data.slow5.idx
+data/test/parsing_error_check/deleted_main_colum_data.slow5.idx
+data/test/parsing_error_check/main_attribute_data_missing.slow5.idx
+data/test/parsing_error_check/main_attribute_name_missing.slow5.idx
+data/test/parsing_error_check/more_than_one_tab_attribute_name_header.slow5.idx
+data/test/parsing_error_check/more_than_one_tab_datarecord.slow5.idx
+data/test/parsing_error_check/no_parsing_errors.slow5.idx
+data/test/parsing_error_check/read_id_starts_with_hash.slow5.idx
+data/test/same_diff_ids.slow5.idx
