--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,13 @@ set(slow5_idx src/slow5_idx.c)
 set(slow5_misc src/slow5_misc.c)
 set(slow5_press src/slow5_press.c)
 
+# example source files
 set(random_read examples/random_read.c)
 set(sequential_read examples/sequential_read.c)
 set(slow5_hdr_get examples/slow5_hdr_get.c)
 set(slow5_aux_get examples/slow5_aux_get.c)
 add_executable(slow5exmp ${slow5_aux_get})
-#
+
 # Build a static lib
 #add_library(slow5 STATIC ${slow5_} ${slow5_idx} ${slow5_misc} ${slow5_press})
 #
