arm test to python

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -63,21 +63,8 @@ jobs:
     - name: test-clang
       run: make test
   os_x_10:
-    name: OSX
+    name: OSX 10
     runs-on: macos-10.15
-    steps:
-    - uses: actions/checkout@v2
-    - name: install packages
-      run: brew install autoconf automake
-    - name: build
-      run: make -j8
-    - name: test
-      run: make test
-    - name: examples
-      run: make examples
-  os_x_11:
-    name: OSX
-    runs-on: macos-11
     steps:
     - uses: actions/checkout@v2
     - name: install packages
