--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -48,3 +48,20 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython numpy
     - name: build
       run: make pyslow5
+  arm64:
+    name: ubuntu arm
+    runs-on: ubuntu-latest
+    steps:
+    - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+    - uses: docker://multiarch/ubuntu-core:arm64-bionic
+      with:
+        args: 'uname -a'
+    - uses: actions/checkout@v1
+    - uses: docker://multiarch/ubuntu-core:arm64-bionic
+      with:
+        args: >
+          bash -c "apt-get update &&
+          apt-get install -y zlib1g-dev gcc make python3 python3-pip &&
+          pip3 install setuptools cython numpy &&
+          ldd --version && gcc --version && python3 --version &&
+          make pyslow5
