--- a/.travis.yml
+++ b/.travis.yml
@@ -48,35 +48,30 @@ jobs:
     #         - zlib1g-dev
     #         - libhdf5-dev
     #   script: autoreconf && ./configure && make && make test
-    - name: "arm64 hdf5 install script"
+    - name: "arm64"
       arch: arm64
       os: linux
       addons:
         apt:
           packages:
             - zlib1g-dev
-      script: autoreconf && ./scripts/install-hdf5.sh 2> /dev/null && ./configure --enable-localhdf5 && make && make test
-    - name: "Multi-arch normal install"
-      arch:
-        - arm64
-        - ppc64le
-        - s390x
+      script: make && make test
+    - name: "IBM Power CPUs"
+      arch: ppc64le
       os: linux
       addons:
         apt:
           packages:
             - zlib1g-dev
-            - libhdf5-dev
-      script: autoreconf && ./configure && make && make test
-    # - name: "IBM Z CPUs"
-    #   arch: s390x
-    #   os: linux
-    #   addons:
-    #     apt:
-    #       packages:
-    #         - zlib1g-dev
-    #         - libhdf5-dev
-    #   script: autoreconf && ./configure && make && make test
+      script: make && make test
+    - name: "IBM Z CPUs"
+      arch: s390x
+      os: linux
+      addons:
+        apt:
+          packages:
+            - zlib1g-dev
+      script: make && make test
     # - stage: deploy
     #   name: "GitHub Release"
     #   dist: trusty
