openmp based fetch records

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,9 @@ set(random_read examples/random_read.c)
 set(sequential_read examples/sequential_read.c)
 set(slow5_hdr_get examples/slow5_hdr_get.c)
 set(slow5_aux_get examples/slow5_aux_get.c)
-add_executable(slow5exmp ${slow5_aux_get})
+set(pthread_get_reads examples/pthread_get_reads.c)
+set(openmp_get_reads examples/openmp_get_reads.c)
+add_executable(slow5exmp ${openmp_get_reads})
 
 # Build a static lib
 #add_library(slow5 STATIC ${slow5_} ${slow5_idx} ${slow5_misc} ${slow5_press})
@@ -42,7 +44,7 @@ add_executable(slow5test test/unit_test_two_rg.c) #run make test to test all tes
 # link with dependencies
 IF (${DEPLOY_PLATFORM} STREQUAL "x86")
     target_link_libraries(slow5test slow5 -lz -ldl -lm -lpthread -lrt)
-    target_link_libraries(slow5exmp slow5 -lz -ldl -lm -lpthread -lrt)
+    target_link_libraries(slow5exmp slow5 -lz -ldl -lm -lpthread -lrt -fopenmp)
 ELSE()
     target_link_libraries(slow5test slow5 -lz -ldl -lm)
     target_link_libraries(slow5exmp slow5 -lz -ldl -lm)
