--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,8 @@ set(slow5_press src/slow5_press.c)
 # example source files
 set(random_read examples/random_read.c)
 set(sequential_read examples/sequential_read.c)
-set(slow5_hdr_get examples/slow5_hdr_get.c)
-set(slow5_aux_get examples/slow5_aux_get.c)
+set(slow5_hdr_get examples/get_hdr_attribute.c)
+set(slow5_aux_get examples/get_aux_field.c)
 set(pthread_get_reads examples/pthread_get_reads.c)
 set(openmp_get_reads examples/openmp_get_reads.c)
 add_executable(slow5exmp ${openmp_get_reads})
