make bin directory

--- a/test/Makefile
+++ b/test/Makefile
@@ -21,34 +21,37 @@ TESTS = $(BIN_DIR)/endian_test \
 	$(BIN_DIR)/unit_test_lossless \
 	$(BIN_DIR)/unit_test_empty
 
-all: $(TESTS)
+all: $(BIN_DIR) $(TESTS)
 
-$(BIN_DIR)/endian_test: endian_test.c
+$(BIN_DIR):
+	mkdir $@
+
+$(BIN_DIR)/endian_test: endian_test.c $(BIN_DIR)
 	$(CC) $(CFLAGS) $< -o $@
 
-$(BIN_DIR)/unit_test_helpers: unit_test_helpers.c unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h $(SRC)/slow5_misc.h
+$(BIN_DIR)/unit_test_helpers: unit_test_helpers.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h $(SRC)/slow5_misc.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
-$(BIN_DIR)/unit_test_press: unit_test_press.c unit_test.h $(LIB)/libslow5.a
+$(BIN_DIR)/unit_test_press: unit_test_press.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
-$(BIN_DIR)/unit_test_ascii: unit_test_ascii.c unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h $(SRC)/slow5_misc.h $(SRC)/slow5_idx.h
+$(BIN_DIR)/unit_test_ascii: unit_test_ascii.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h $(SRC)/slow5_misc.h $(SRC)/slow5_idx.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
-$(BIN_DIR)/unit_test_binary: unit_test_binary.c unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h $(SRC)/slow5_misc.h $(SRC)/slow5_idx.h
+$(BIN_DIR)/unit_test_binary: unit_test_binary.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h $(SRC)/slow5_misc.h $(SRC)/slow5_idx.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
-$(BIN_DIR)/convert_slow5_test: convert_slow5_test.c unit_test.h $(LIB)/libslow5.a
+$(BIN_DIR)/convert_slow5_test: convert_slow5_test.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
-$(BIN_DIR)/unit_test_two_rg: unit_test_two_rg.c unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h
+$(BIN_DIR)/unit_test_two_rg: unit_test_two_rg.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
-$(BIN_DIR)/unit_test_lossless: unit_test_lossless.c unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h
+$(BIN_DIR)/unit_test_lossless: unit_test_lossless.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
-$(BIN_DIR)/unit_test_empty: unit_test_empty.c unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h
+$(BIN_DIR)/unit_test_empty: unit_test_empty.c $(BIN_DIR) unit_test.h $(LIB)/libslow5.a $(SRC)/slow5_extra.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@ $(LDFLAGS)
 
 clean:
-	rm -rf $(TESTS)
+	rm -rf $(TESTS) $(BIN_DIR)
