cmake files updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,12 @@ ENDIF()
 
 project(slow5lib)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2 -std=gnu99")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2 -std=gnu99 -fopenmp")
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
 include_directories(${PROJECT_SOURCE_DIR}/test)
 include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/thirdparty/streamvbyte/include)
 
 set(slow5_ src/slow5.c)
 set(slow5_idx src/slow5_idx.c)
@@ -26,9 +27,11 @@ set(random_read examples/random_read.c)
 set(sequential_read examples/sequential_read.c)
 set(slow5_hdr_get examples/get_hdr_attribute.c)
 set(slow5_aux_get examples/get_aux_field.c)
-set(pthread_get_reads examples/pthread_get_reads.c)
-set(openmp_get_reads examples/openmp_get_reads.c)
+set(pthread_get_reads examples/random_read_pthreads.c)
+set(openmp_get_reads examples/random_read_openmp.c)
 add_executable(slow5exmp ${openmp_get_reads})
+
+add_subdirectory(thirdparty/streamvbyte)
 
 # Build a static lib
 #add_library(slow5 STATIC ${slow5_} ${slow5_idx} ${slow5_misc} ${slow5_press})
@@ -43,8 +46,8 @@ add_executable(slow5test test/unit_test_two_rg.c) #run make test to test all tes
 #
 # link with dependencies
 IF (${DEPLOY_PLATFORM} STREQUAL "x86")
-    target_link_libraries(slow5test slow5 -lz -ldl -lm -lpthread -lrt)
-    target_link_libraries(slow5exmp slow5 -lz -ldl -lm -lpthread -lrt -fopenmp)
+    target_link_libraries(slow5test slow5 streamvbyte -lz -ldl -lm -lpthread -lrt)
+    target_link_libraries(slow5exmp slow5 streamvbyte -lz -ldl -lm -lpthread -lrt -fopenmp)
 ELSE()
     target_link_libraries(slow5test slow5 -lz -ldl -lm)
     target_link_libraries(slow5exmp slow5 -lz -ldl -lm)
