--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -47,6 +47,19 @@ jobs:
       run: ./test/test.sh mem
     - name: examples
       run: make examples
+  ubuntu_18_zstd:
+    name: Ubuntu 18 with zstd
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: install packages
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev libzstd-dev valgrind
+    - name: build
+      run:  make -j8 zstd=1
+    - name: test
+      run: make test zstd=1
+    - name: test valgrind
+      run: ./test/test.sh mem
   ubuntu_20:
     name: Ubuntu 20
     runs-on: ubuntu-20.04
@@ -67,27 +80,36 @@ jobs:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
-    - name: install packages
-      run: brew install autoconf automake
     - name: build
       run: make -j8
     - name: test
       run: make test
     - name: examples
       run: make examples
-  arm64:
-    name: ubuntu arm
-    runs-on: ubuntu-latest
+  os_x_10_zstd:
+    name: OSX 10 zstd
+    runs-on: macos-10.15
     steps:
-    - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
-    - uses: docker://multiarch/ubuntu-core:arm64-bionic
-      with:
-        args: 'uname -a'
-    - uses: actions/checkout@v1
-    - uses: docker://multiarch/ubuntu-core:arm64-bionic
-      with:
-        args: >
-          bash -c "apt-get update &&
-          apt-get install -y zlib1g-dev gcc make &&
-          ldd --version && gcc --version &&
-          make && make test
+    - uses: actions/checkout@v2
+    - name: install packages
+      run: brew install zstd
+    - name: build
+      run: make -j8 zstd=1
+    - name: test
+      run: make test zstd=1
+  # arm64:
+  #   name: ubuntu arm
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  #   - uses: docker://multiarch/ubuntu-core:arm64-bionic
+  #     with:
+  #       args: 'uname -a'
+  #   - uses: actions/checkout@v1
+  #   - uses: docker://multiarch/ubuntu-core:arm64-bionic
+  #     with:
+  #       args: >
+  #         bash -c "apt-get update &&
+  #         apt-get install -y zlib1g-dev gcc make &&
+  #         ldd --version && gcc --version &&
+  #         make && make test
