--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ jobs:
         apt:
           packages:
             - zlib1g-dev
-            - libzstd-dev
+            - libzstd1-dev
       script: make zstd=1 && make test zstd=1
     - name: "IBM Power CPUs"
       arch: ppc64le
