--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,6 +19,8 @@ jobs:
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version && python3 --version
     - name: build
       run: make pyslow5
+    - name: test
+      run: python3 -m unittest -v python/test.py
   ubuntu_16:
     name: pyslow5 Ubuntu 16
     runs-on: ubuntu-16.04
@@ -30,6 +32,8 @@ jobs:
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version  && python3 --version
     - name: build
       run: make pyslow5
+    - name: test
+      run: python3 -m unittest -v python/test.py
   pyslow5_ubuntu_18:
     name: pyslow5 Ubuntu 18
     runs-on: ubuntu-18.04
@@ -39,6 +43,8 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython numpy
     - name: build
       run: make pyslow5
+    - name: test
+      run: python3 -m unittest -v python/test.py
   ubuntu_20:
     name: pyslow5 Ubuntu 20
     runs-on: ubuntu-20.04
@@ -48,6 +54,8 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython numpy
     - name: build
       run: make pyslow5
+    - name: test
+      run: python3 -m unittest -v python/test.py
   arm64:
     name: pyslow5 ubuntu arm
     runs-on: ubuntu-latest
@@ -65,3 +73,4 @@ jobs:
           pip3 install setuptools cython &&
           ldd --version && gcc --version && python3 --version &&
           make pyslow5
+          python3 -m unittest -v python/test.py
