--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   ubuntu_14:
     name: ubuntu_14
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-18.04
     container: ubuntu:14.04
     steps:
     - uses: actions/checkout@v2
@@ -23,7 +23,8 @@ jobs:
       run: make test
   ubuntu_16:
     name: Ubuntu 16
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-18.04
+    container: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
