--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   ubuntu_14:
     name: pyslow5 Ubuntu_14
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-18.04
     container: ubuntu:14.04
     steps:
     - uses: actions/checkout@v2
@@ -23,7 +23,8 @@ jobs:
       run: python3 -m unittest -v python/test.py
   ubuntu_16:
     name: pyslow5 Ubuntu 16
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-18.04
+    container: ubuntu:16.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
