--- a/test/.gitignore
+++ b/test/.gitignore
@@ -34,3 +34,9 @@ data/test/parsing_error_check/read_id_starts_with_hash.slow5.idx
 data/test/same_diff_ids.slow5.idx
 data/exp/aux_array/exp_lossless_end_reason.slow5.idx
 test/data/exp/aux_array/exp_lossless_end_reason.slow5.idx
+
+bench/get_all_read_ids
+bench/get_all_samples
+bench/get_selected_read_ids_read_number
+bench/get_selected_read_ids_sample_count
+bench/get_selected_read_ids_samples
