lazy_thread API with zstd writing support

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ master, dev, cleanup ]
+    branches: [ '*' ]
   pull_request:
-    branches: [ master, dev, cleanup ]
+    branches: [ '*' ]
 
 jobs:
   ubuntu_14:
