--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   ubuntu_14:
     name: ubuntu_14
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     container: ubuntu:14.04
     steps:
     - uses: actions/checkout@v2
@@ -23,7 +23,7 @@ jobs:
       run: make test
   ubuntu_16:
     name: Ubuntu 16
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     container: ubuntu:16.04
     steps:
     - uses: actions/checkout@v2
@@ -35,11 +35,12 @@ jobs:
       run: make test
   ubuntu_18:
     name: Ubuntu 18
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
+    container: ubuntu:18.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev valgrind
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev valgrind gcc g++ autoconf automake make
     - name: build
       run:  make -j8
     - name: test
@@ -50,11 +51,12 @@ jobs:
       run: make examples
   ubuntu_18_zstd:
     name: Ubuntu 18 with zstd
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
+    container: ubuntu:18.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev libzstd-dev valgrind
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev libzstd-dev valgrind gcc g++ autoconf automake make
     - name: build
       run:  make -j8 zstd=1
     - name: test
