see if pyslow5 compiles on mac

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -81,6 +81,8 @@ jobs:
     runs-on: macos-11
     steps:
     - uses: actions/checkout@v2
+    - name: install packages
+      run: pip install numpy
     - name: build
       run: make pyslow5
     - name: test
