--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -74,8 +74,8 @@ jobs:
           apt-get install -y zlib1g-dev gcc make python3 python3-pip python3-numpy &&
           pip3 install setuptools cython &&
           ldd --version && gcc --version && python3 --version &&
-          make pyslow5
-          python3 -m unittest -v python/test.py
+          make pyslow5 &&
+          python3 -m unittest -v python/test.py"
   os_x_11:
     name: pyslow5 mac os
     runs-on: macos-11
