--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -129,19 +129,19 @@ jobs:
       run: make -j8 zstd=1
     - name: test
       run: make test zstd=1
-  # arm64:
-  #   name: ubuntu arm
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
-  #   - uses: docker://multiarch/ubuntu-core:arm64-bionic
-  #     with:
-  #       args: 'uname -a'
-  #   - uses: actions/checkout@v1
-  #   - uses: docker://multiarch/ubuntu-core:arm64-bionic
-  #     with:
-  #       args: >
-  #         bash -c "apt-get update &&
-  #         apt-get install -y zlib1g-dev gcc make &&
-  #         ldd --version && gcc --version &&
-  #         make && make test
+  arm64:
+    name: ubuntu arm
+    runs-on: ubuntu-latest
+    steps:
+    - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+    - uses: docker://multiarch/ubuntu-core:arm64-bionic
+      with:
+        args: 'uname -a'
+    - uses: actions/checkout@v1
+    - uses: docker://multiarch/ubuntu-core:arm64-bionic
+      with:
+        args: >
+          bash -c "apt-get update &&
+          apt-get install -y zlib1g-dev gcc make &&
+          ldd --version && gcc --version &&
+          make && make test"
