--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -87,3 +87,14 @@ jobs:
       run: make pyslow5
     - name: test
       run: python3 -m unittest -v python/test.py
+  os_x_12:
+    name: pyslow5 mac os
+    runs-on: macos-12
+    steps:
+    - uses: actions/checkout@v2
+    - name: install packages
+      run: pip3 install numpy
+    - name: build
+      run: make pyslow5
+    - name: test
+      run: python3 -m unittest -v python/test.py
