--- a/test/.gitignore
+++ b/test/.gitignore
@@ -40,3 +40,8 @@ bench/get_samples
 bench/get_read_number_rand
 bench/get_sample_count_rand
 bench/get_samples_rand
+bench/get_samples_rand
+bench/convert_to_pa
+bench/convert_to_pa_rand
+bench/get_all
+bench/get_samples_no_pipelining
